replace webpack with parcel

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="tachyons.min.css">
+  <link rel="stylesheet" href="./assets/tachyons.min.css">
 </head>
 <body class="sans-serif">
   <div id="app"></div>
-  <script src="index.js"></script>
+  <script src="./Index.bs.js"></script>
 </body>
 </html>
