remove minified tachyons and add main.css

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./assets/tachyons.min.css">
+  <link rel="stylesheet" href="./assets/tachyons.css">
+  <link rel="stylesheet" href="./assets/main.css">
 </head>
 <body class="sans-serif">
   <div id="app"></div>
