--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>ReasonML Sequencer</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./assets/tachyons.css">
   <link rel="stylesheet" href="./assets/main.css">
